# youbot_gazebo_simulation

./: README.md
yb_description/: CMakeLists.txt  package.xml
yb_description/controller/: ros_controller.urdf.xacro
yb_description/urdf/: youbot.urdf.xacro
yb_description/urdf/youbot_arm/: arm.transmission.xacro  arm.urdf.xacro  arm_with_cam.urdf.xacro
yb_description/urdf/youbot_base/: base.gazebo.xacro  base.transmission.xacro  base.urdf.xacro
yb_description/urdf/youbot_gripper/: gripper.transmission.xacro  gripper.urdf.xacro
yb_description/urdf/youbot_plate/: plate.urdf.xacro
youbot_control/: CMakeLists.txt  hidehide_controller_plugins.xml  package.xml
youbot_control/config/: arm_1_controller.yaml  joint_state_controller.yaml
youbot_control/controller/: arm_joint_universal_control.yaml
youbot_control/launch/: arm_controller.launch  joint_state_controller.launch
youbot_control/src/: ba_jointposition_listener.cpp  youbot_universal_control.cpp
youbot_gazebo/: CMakeLists.txt  package.xml
youbot_gazebo/launch/: youbot.launch
youbot_gazebo/worlds/: empty.world  sim_1.world
